--- a/Tabulka/index.html
+++ b/Tabulka/index.html
@@ -17,32 +17,31 @@
         <tr>
             <td>Trička</td> 
             <td>Adidas</td>
-            <td></td>
-            <td></td>
+            <td>Černá</td>
             <td></td>
         </tr>
         <tr>
             <td>Mikiny</td>
             <td>Puma</td>
-            <td></td>
+            <td>Bílá</td>
             <td></td>
         </tr>
         <tr>
             <td>Tepláky</td>
             <td>Nike</td>
-            <td></td>
+            <td>Šedá</td>
             <td></td>
             </tr>
         <tr>
             <td>Kraťasy</td>
             <td>Under Armour</td>
-            <td></td>
+            <td>Modrá</td>
             <td></td>
         </tr>
         <tr>
             <td>Ponožky</td>
-            <td>Levi¨s</td>
-            <td></td>
+            <td>Levi's</td>
+            <td>Zelená</td>
             <td></td>
         </tr>
     </table>
