--- a/Tabulka/index.html
+++ b/Tabulka/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Tabulka</h1>
-    <table>
+    <table border="1">
         <tr>
           <th>Oblečení</th>
           <th>Značka</th>
@@ -18,31 +18,31 @@
             <td>Trička</td> 
             <td>Adidas</td>
             <td>Černá</td>
-            <td></td>
+            <td>599 Kč</td>
         </tr>
         <tr>
             <td>Mikiny</td>
             <td>Puma</td>
             <td>Bílá</td>
-            <td></td>
+            <td>1 199 Kč</td>
         </tr>
         <tr>
             <td>Tepláky</td>
             <td>Nike</td>
             <td>Šedá</td>
-            <td></td>
-            </tr>
+            <td>899 Kč</td>
+        </tr>
         <tr>
             <td>Kraťasy</td>
             <td>Under Armour</td>
             <td>Modrá</td>
-            <td></td>
+            <td>749 Kč</td>
         </tr>
         <tr>
             <td>Ponožky</td>
             <td>Levi's</td>
             <td>Zelená</td>
-            <td></td>
+            <td>199 Kč</td>
         </tr>
     </table>
 </body>
