--- a/Tabulka/index.html
+++ b/Tabulka/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Tabulka</h1>
-    <table border="1">
+    <table>
         <tr>
           <th>Oblečení</th>
           <th>Značka</th>
@@ -28,7 +29,7 @@
         </tr>
         <tr>
             <td>Tepláky</td>
-            <td>Nike</td>
+            <td><img src="Nike_logo.png" width="50px" height="16px"></td>
             <td>Šedá</td>
             <td>899 Kč</td>
         </tr>
