--- a/Periodicka_tabulka-test/index.html
+++ b/Periodicka_tabulka-test/index.html
@@ -50,104 +50,104 @@
             <td class="vzacne_plyny">Ne</td>
         </tr>
         <tr>
-            <td >Na</td>
-            <td >Mg</td>
-            <td ></td>
-            <td ></td>
-            <td ></td>
-            <td ></td>
-            <td ></td>
-            <td ></td>
-            <td ></td>
-            <td ></td>
-            <td ></td>
-            <td ></td>
-            <td >Al</td>
-            <td >Si</td>
-            <td >P</td>
-            <td >S</td>
-            <td >Cl</td>
-            <td >Ar</td>                    
+            <td class="alkalicke_kovy">Na</td>
+            <td class="kovy">Mg</td>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="kovy">Al</td>
+            <td class="polokovy">Si</td>
+            <td class="nekovy">P</td>
+            <td class="nekovy">S</td>
+            <td class="halogeny">Cl</td>
+            <td class="vzacne_plyny">Ar</td>                    
         </tr>
         <tr>
-            <td >K</td>
-            <td >Ca</td>
-            <td >Sc</td>
-            <td >Ti</td>
-            <td >V</td>
-            <td >Cr</td>
-            <td >Mn</td>
-            <td >Fe</td>
-            <td >Co</td>
-            <td >Ni</td>
-            <td >Cu</td>
-            <td >Zn</td>
-            <td >Ga</td>
-            <td >Ge</td>
-            <td >As</td>
-            <td >Se</td>
-            <td >Br</td>
-            <td >Kr</td>
+            <td class="alkalicke_kovy">K</td>
+            <td class="kovy_alkalickych_zemin">Ca</td>
+            <td class="prechodne_kovy">Sc</td>
+            <td class="prechodne_kovy">Ti</td>
+            <td class="prechodne_kovy">V</td>
+            <td class="prechodne_kovy">Cr</td>
+            <td class="prechodne_kovy">Mn</td>
+            <td class="prechodne_kovy">Fe</td>
+            <td class="prechodne_kovy">Co</td>
+            <td class="prechodne_kovy">Ni</td>
+            <td class="prechodne_kovy">Cu</td>
+            <td class="prechodne_kovy">Zn</td>
+            <td class="kovy">Ga</td>
+            <td class="polokovy">Ge</td>
+            <td class="polokovy">As</td>
+            <td class="nekovy">Se</td>
+            <td class="halogeny">Br</td>
+            <td class="vzacne_plyny">Kr</td>
         </tr>
         <tr>
-            <td >Rb</td>
-            <td >Sr</td>
-            <td >Y</td>
-            <td >Zr</td>
-            <td >Nb</td>
-            <td >Mo</td>
-            <td >Tc</td>
-            <td >Ru</td>
-            <td >Rh</td>
-            <td >Pd</td>
-            <td >Ag</td>
-            <td >Cd</td>
-            <td >In</td>
-            <td >Sn</td>
-            <td >Sb</td>
-            <td >Te</td>
-            <td >I</td>
-            <td >Xe</td>
+            <td class="alkalicke_kovy">Rb</td>
+            <td class="kovy_alkalickych_zemin">Sr</td>
+            <td class="prechodne_kovy">Y</td>
+            <td class="prechodne_kovy">Zr</td>
+            <td class="prechodne_kovy">Nb</td>
+            <td class="prechodne_kovy">Mo</td>
+            <td class="prechodne_kovy">Tc</td>
+            <td class="prechodne_kovy">Ru</td>
+            <td class="prechodne_kovy">Rh</td>
+            <td class="prechodne_kovy">Pd</td>
+            <td class="prechodne_kovy">Ag</td>
+            <td class="prechodne_kovy">Cd</td>
+            <td class="kovy">In</td>
+            <td class="kovy">Sn</td>
+            <td class="polokovy">Sb</td>
+            <td class="polokovy">Te</td>
+            <td class="halogeny">I</td>
+            <td class="vzacne_plyny">Xe</td>
         </tr>
         <tr>
-            <td >Cs</td>
-            <td >Ba</td>
-            <td ></td>
-            <td >Hf</td>
-            <td >Ta</td>
-            <td >W</td>
-            <td >Re</td>
-            <td >Os</td>
-            <td >Ir</td>
-            <td >Pt</td>
-            <td >Au</td>
-            <td >Hg</td>
-            <td >Ti</td>
-            <td >Pb</td>
-            <td >Bi</td>
-            <td >Po</td>
-            <td >At</td>
-            <td >Rn</td>
+            <td class="alkalicke_kovy">Cs</td>
+            <td class="kovy_alkalickych_zemin">Ba</td>
+            <td class="prazdne"></td>
+            <td class="prechodne_kovy">Hf</td>
+            <td class="prechodne_kovy">Ta</td>
+            <td class="prechodne_kovy">W</td>
+            <td class="prechodne_kovy">Re</td>
+            <td class="prechodne_kovy">Os</td>
+            <td class="prechodne_kovy">Ir</td>
+            <td class="prechodne_kovy">Pt</td>
+            <td class="prechodne_kovy">Au</td>
+            <td class="prechodne_kovy">Hg</td>
+            <td class="kovy">Ti</td>
+            <td class="kovy">Pb</td>
+            <td class="kovy">Bi</td>
+            <td class="kovy">Po</td>
+            <td class="halogeny">At</td>
+            <td class="vzacne_plyny">Rn</td>
         </tr>
         <tr>
-            <td >Fr</td>
-            <td >Ra</td>
-            <td ></td>
-            <td >Rf</td>
-            <td >Db</td>
-            <td >Sg</td>
-            <td >Bh</td>
-            <td >Hs</td>
-            <td >Mt</td>
-            <td >Ds</td>
-            <td >Rg</td>
-            <td >Cn</td>
-            <td >Nh</td>
-            <td >Fl</td>
-            <td >Mc</td>
-            <td >Lv</td>
-            <td >Ts</td>
-            <td >Og</td>
+            <td class="alkalicke_kovy">Fr</td>
+            <td class="kovy_alkalickych_zemin">Ra</td>
+            <td class="prazdne"></td>
+            <td class="prechodne_kovy">Rf</td>
+            <td class="prechodne_kovy">Db</td>
+            <td class="prechodne_kovy">Sg</td>
+            <td class="prechodne_kovy">Bh</td>
+            <td class="prechodne_kovy">Hs</td>
+            <td class="prechodne_kovy">Mt</td>
+            <td class="prechodne_kovy">Ds</td>
+            <td class="prechodne_kovy">Rg</td>
+            <td class="prechodne_kovy">Cn</td>
+            <td class="kovy">Nh</td>
+            <td class="kovy">Fl</td>
+            <td class="kovy">Mc</td>
+            <td class="kovy">Lv</td>
+            <td class="halogeny">Ts</td>
+            <td class="vzacne_plyny">Og</td>
         </tr>
     </table>
 </body>
