--- a/Periodicka_tabulka-test/index.html
+++ b/Periodicka_tabulka-test/index.html
@@ -148,6 +148,50 @@
             <td class="kovy">Lv</td>
             <td class="halogeny">Ts</td>
             <td class="vzacne_plyny">Og</td>
+        </tr> 
+    </table>
+    <br>
+    <br>
+    <table>
+        <tr>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="ostatni">La</td>
+            <td class="ostatni">Ce</td>
+            <td class="ostatni">Pr</td>
+            <td class="ostatni">Nd</td>
+            <td class="ostatni">Pm</td>
+            <td class="ostatni">Sm</td>
+            <td class="ostatni">Eu</td>
+            <td class="ostatni">Gd</td>
+            <td class="ostatni">Tb</td>
+            <td class="ostatni">Dy</td>
+            <td class="ostatni">Ho</td>
+            <td class="ostatni">Er</td>
+            <td class="ostatni">Tm</td>
+            <td class="ostatni">Yb</td>
+            <td class="ostatni">Lu</td>
+            <td class="prazdne"></td>
+        </tr>
+        <tr>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="ostatni">Ac</td>
+            <td class="ostatni">Th</td>
+            <td class="ostatni">Pa</td>
+            <td class="ostatni">U</td>
+            <td class="ostatni">Np</td>
+            <td class="ostatni">Pu</td>
+            <td class="ostatni">Am</td>
+            <td class="ostatni">Cm</td>
+            <td class="ostatni">Bk</td>
+            <td class="ostatni">Cf</td>
+            <td class="ostatni">Es</td>
+            <td class="ostatni">Fm</td>
+            <td class="ostatni">Md</td>
+            <td class="ostatni">No</td>
+            <td class="ostatni">Lr</td>
+            <td class="prazdne"></td>
         </tr>
     </table>
 </body>
