--- a/Periodicka_tabulka-test/index.html
+++ b/Periodicka_tabulka-test/index.html
@@ -10,7 +10,30 @@
     <h1>Periodická soustava prvků</h1>
     <table>
         <tr>
+            <td class="prazdne"></td>
+            <td class="prazdne">1</td>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="prazdne"></td>
+            <td class="prazdne">18</td> 
+        </tr>
+        <tr>
+            <td class="prazdne">1</td>
             <td class="nekovy">H</td>
+            <td class="prazdne">2</td>
             <td class="prazdne"></td>
             <td class="prazdne"></td>
             <td class="prazdne"></td>
@@ -21,15 +44,15 @@
             <td class="prazdne"></td>
             <td class="prazdne"></td>
             <td class="prazdne"></td>
-            <td class="prazdne"></td>
-            <td class="prazdne"></td>
-            <td class="prazdne"></td>
-            <td class="prazdne"></td>
-            <td class="prazdne"></td>
-            <td class="prazdne"></td>
+            <td class="prazdne">13</td>
+            <td class="prazdne">14</td>
+            <td class="prazdne">15</td>
+            <td class="prazdne">16</td>
+            <td class="prazdne">17</td>
             <td class="vzacne_plyny">He</td>
         </tr>
         <tr>
+            <td class="prazdne">2</td>
             <td class="alkalicke_kovy">Li</td>
             <td class="kovy">Be</td>
             <td class="prazdne"></td>
@@ -50,18 +73,19 @@
             <td class="vzacne_plyny">Ne</td>
         </tr>
         <tr>
+            <td class="prazdne">3</td>
             <td class="alkalicke_kovy">Na</td>
             <td class="kovy">Mg</td>
-            <td class="prazdne"></td>
-            <td class="prazdne"></td>
-            <td class="prazdne"></td>
-            <td class="prazdne"></td>
-            <td class="prazdne"></td>
-            <td class="prazdne"></td>
-            <td class="prazdne"></td>
-            <td class="prazdne"></td>
-            <td class="prazdne"></td>
-            <td class="prazdne"></td>
+            <td class="prazdne">3</td>
+            <td class="prazdne">4</td>
+            <td class="prazdne">5</td>
+            <td class="prazdne">6</td>
+            <td class="prazdne">7</td>
+            <td class="prazdne">8</td>
+            <td class="prazdne">9</td>
+            <td class="prazdne">10</td>
+            <td class="prazdne">11</td>
+            <td class="prazdne">12</td>
             <td class="kovy">Al</td>
             <td class="polokovy">Si</td>
             <td class="nekovy">P</td>
@@ -70,6 +94,7 @@
             <td class="vzacne_plyny">Ar</td>                    
         </tr>
         <tr>
+            <td class="prazdne">4</td>
             <td class="alkalicke_kovy">K</td>
             <td class="kovy_alkalickych_zemin">Ca</td>
             <td class="prechodne_kovy">Sc</td>
@@ -90,6 +115,7 @@
             <td class="vzacne_plyny">Kr</td>
         </tr>
         <tr>
+            <td class="prazdne">5</td>
             <td class="alkalicke_kovy">Rb</td>
             <td class="kovy_alkalickych_zemin">Sr</td>
             <td class="prechodne_kovy">Y</td>
@@ -110,6 +136,7 @@
             <td class="vzacne_plyny">Xe</td>
         </tr>
         <tr>
+            <td class="prazdne">6</td>
             <td class="alkalicke_kovy">Cs</td>
             <td class="kovy_alkalickych_zemin">Ba</td>
             <td class="prazdne"></td>
@@ -130,6 +157,7 @@
             <td class="vzacne_plyny">Rn</td>
         </tr>
         <tr>
+            <td class="prazdne">7</td>
             <td class="alkalicke_kovy">Fr</td>
             <td class="kovy_alkalickych_zemin">Ra</td>
             <td class="prazdne"></td>
@@ -154,8 +182,8 @@
     <br>
     <table>
         <tr>
-            <td class="prazdne"></td>
-            <td class="prazdne"></td>
+            <td class="prazdne">6</td>
+            <td class="prazdne">Lanthanoidy</td>
             <td class="ostatni">La</td>
             <td class="ostatni">Ce</td>
             <td class="ostatni">Pr</td>
@@ -174,8 +202,8 @@
             <td class="prazdne"></td>
         </tr>
         <tr>
-            <td class="prazdne"></td>
-            <td class="prazdne"></td>
+            <td class="prazdne">7</td>
+            <td class="prazdne">Aktinoidy</td>
             <td class="ostatni">Ac</td>
             <td class="ostatni">Th</td>
             <td class="ostatni">Pa</td>
