--- a/Periodicka_tabulka-test/index.html
+++ b/Periodicka_tabulka-test/index.html
@@ -56,14 +56,14 @@
             <td class="alkalicke_kovy">Li</td>
             <td class="kovy">Be</td>
             <td class="prazdne"></td>
-            <td class="prazdne"></td>
-            <td class="prazdne"></td>
-            <td class="prazdne"></td>
-            <td class="prazdne"></td>
-            <td class="prazdne"></td>
-            <td class="prazdne"></td>
-            <td class="prazdne"></td>
-            <td class="prazdne"></td>
+            <td class="alkalicke_kovy_borderless">alkalické kovy</td>
+            <td class="kovy_alkalickych_zemin_borderless">kovy alkalických zemin</td>
+            <td class="prechodne_kovy_borderless">přechodné kovy</td>
+            <td class="kovy_borderless">kovy</td>
+            <td class="polokovy_borderless">polokovy</td>
+            <td class="nekovy_borderless">nekovy</td>
+            <td class="halogeny_borderless">halogeny</td>
+            <td class="vzacne_plyny_borderless">vzácné plyny</td>
             <td class="prazdne"></td>
             <td class="polokovy">B</td>
             <td class="nekovy">C</td>
